# prefixctl-bgp-monitor

./: .gitignore  README.md  pyproject.toml
src/bgpmon/: admin.py  apps.py  models.py  monitor.py  serializers.py  settings.py
src/bgpmon/migrations/: 0001_initial.py
src/bgpmon/static/bgpmon/: bgpmon.js
src/bgpmon/templates/prefixctl/v2/: base.html
src/bgpmon/templates/prefixctl/v2/tool/prefix_sets/: bgp-monitor-form.html  list.html  main.html
src/prefixctl_bgp_monitor/: admin.py  apps.py  models.py  monitor.py  serializers.py  settings.py  signals.py  views.py
src/prefixctl_bgp_monitor/migrations/: 0001_initial.py  0002_bgpmonitor_result.py
src/prefixctl_bgp_monitor/static/prefixctl_bgp_monitor/: monitor.js
src/prefixctl_bgp_monitor/templates/prefixctl/v2/: base.html
src/prefixctl_bgp_monitor/templates/prefixctl/v2/tool/prefix_sets/: bgp-announcements.html  bgp-monitor-form.html  list.html  main.html
